# keepassz

./: .travis.yml  CMakeLists.txt  COPYING  INSTALL  README.md  changelog  dmg-create.sh  keepassx.pro  translations_release.sh  translations_update.sh
cmake/: FindPCHSupport.cmake
debian/: changelog  control  keepassz.1  manpages  rules  watch
nsis/: simple-nsis.nsi
share/: CMakeLists.txt
share/applications/: keepassz.desktop
share/keepassx/i18n/: keepassx-gl_ES.qm  keepassx-hu_HU.qm  keepassx-it_IT.qm  keepassx-nl_NL.qm  keepassx-pl_PL.qm  keepassx-pt_PT.qm  keepassx-ru_RU.qm  keepassx-sr_RS.qm  keepassx-uk_UA.qm  qt_nl.qm
share/keepassz/: license.html  license.txt
share/keepassz/i18n/: keepassx-de_DE.qm  keepassx-es_ES.qm  keepassx-fi_FI.qm  keepassx-fr_FR.qm  keepassx-ja_JP.qm  keepassx-nb_NO.qm  keepassx-sk_SK.qm  keepassx-tr_TR.qm  keepassx-zh_CN.qm  qt_hu.qm
share/macx_bundle/: Info.plist  Info_cmake.plist  icon.icns
share/win_ico/: keepassz.rc
src/: Application_X11.cpp  Application_X11.h  CMakeLists.txt  Database.cpp  Database.h  Kdb3Database.cpp  Kdb3Database.h  KpxConfig.cpp  KpxConfig.h  keepassx.h  main.cpp  main.h  main_macx.cpp  main_unix.cpp  main_win32.cpp  mainwindow.cpp  mainwindow.h  src.pro
src/apg/: convert.c  owntypes.h  pronpass.c  pronpass.h  randpass.c  randpass.h
src/crypto/: arcfour.h  twofish.cpp  yarrow.cpp
src/dialogs/: AboutDlg.cpp  AboutDlg.h  AddBookmarkDlg.cpp  AddBookmarkDlg.h  AutoTypeDlg.cpp  AutoTypeDlg.h  CalendarDlg.cpp  CalendarDlg.h  CollectEntropyDlg.cpp  CollectEntropyDlg.h  CustomizeDetailViewDlg.cpp  CustomizeDetailViewDlg.h  DatabaseSettingsDlg.cpp  DatabaseSettingsDlg.h  EditEntryDlg.cpp  EditEntryDlg.h  EditGroupDlg.cpp  EditGroupDlg.h  ExpiredEntriesDlg.cpp  ExpiredEntriesDlg.h  HelpDlg.cpp  HelpDlg.h  ManageBookmarksDlg.cpp  ManageBookmarksDlg.h  PasswordDlg.cpp  PasswordDlg.h  PasswordGenDlg.cpp  PasswordGenDlg.h  SearchDlg.cpp  SearchDlg.h  SelectIconDlg.cpp  SelectIconDlg.h  SettingsDlg.cpp  SettingsDlg.h  SimplePasswordDlg.cpp  SimplePasswordDlg.h  TargetWindowDlg.cpp  TargetWindowDlg.h  TrashCanDlg.cpp  TrashCanDlg.h
src/export/: Export.cpp  Export.h  Export_KeePassX_Xml.cpp  Export_KeePassX_Xml.h  Export_Txt.cpp  Export_Txt.h
src/forms/: AboutDlg.ui  AddBookmarkDlg.ui  AutoTypeDlg.ui  CalendarDlg.ui  CollectEntropyDlg.ui  CustomizeDetailViewDlg.ui  DatabaseSettingsDlg.ui  EditEntryDlg.ui  EditGroupDlg.ui  ExpiredEntriesDlg.ui  HelpDlg.ui  MainWindow.ui  ManageBookmarksDlg.ui  PasswordDlg.ui  PasswordGenDlg.ui  SearchDlg.ui  SelectIconDlg.ui  SettingsDlg.ui  SimplePasswordDlg.ui  TargetWindowDlg.ui  TrashCanDlg.ui  WorkspaceLockedWidget.ui
src/import/: Import.cpp  Import.h  Import_GnuKeyRing.cpp  Import_GnuKeyRing.h  Import_KWalletXml.cpp  Import_KWalletXml.h  Import_KeePassX_Xml.cpp  Import_KeePassX_Xml.h  Import_PwManager.cpp  Import_PwManager.h
src/lib/: EntryView.cpp  FileDialogs.cpp  SecString.cpp  SecString.h  random.cpp  tools.cpp  tools.h
src/plugins/gnome/: keepassx-gnome.cpp  keepassx-gnome.h  keepassx-gnome.pro
src/plugins/interfaces/: IFileDialog.h  IGnomeInit.h  IIconTheme.h  IKdeInit.h
src/plugins/kde/: KpKApplication.cpp  KpKApplication.h  keepassx-kde.cpp  keepassx-kde.h  keepassx-kde.pro
src/res/: default-detailview-classic.html  default-detailview.html  resources.qrc
src/res/docs/: faq.html  features.html  index.html  installation.html  quickstart.html  systemreq.html
src/translations/: keepassx-de_DE.ts  keepassx-es_ES.ts  keepassx-fi_FI.ts  keepassx-it_IT.ts  keepassx-ja_JP.ts  keepassx-nl_NL.ts  keepassx-pl_PL.ts  keepassx-uk_UA.ts  keepassx-zh_CN.ts  keepassz-cs_CZ.ts  keepassz-fr_FR.ts  keepassz-gl_ES.ts  keepassz-hu_HU.ts  keepassz-nb_NO.ts  keepassz-pt_PT.ts  keepassz-ru_RU.ts  keepassz-sk_SK.ts  keepassz-sr_RS.ts  keepassz-tr_TR.ts  keepassz-xx_XX.ts
